--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                             </div>
                             <h3 class="text-xl font-semibold mb-3 text-white text-center">This Portfolio Website</h3>
                             <p class="text-gray-300 text-sm mb-4">
-                                The very website you are Browse! Built from scratch to showcase my skills, projects, and
+                                The very website you are browsing! Built from scratch to showcase my skills, projects, and
                                 journey as a young coder. Features interactive elements and a modern design.
                             </p>
                             <div class="mb-4 text-center">
@@ -628,7 +628,7 @@
                                     </div>
                                     <div>
                                         <h4 class="text-white font-medium">Email</h4>
-                                        <p class="text-gray-300">caraadi8@gmail.com</p>
+                                        <p class="text-gray-300">caraadi10@gmail.com</p>
                                     </div>
                                 </div>
                                 <div class="flex items-center space-x-4">
